fix: http `query` api now applies the default 20k limit only if no limit is used
Fixed issue #2884

(cherry picked from commit 81eb40ffea2349b96595d1f558be53c0583db435)